# AUTOCAD-ELECTRICAL-MCP

./: .env.example  .gitignore  GUIDE.md  README.md  config.yaml  mcp_config.json  pyproject.toml  start_web.bat  start_web.py
scripts/: draw_motor_trifasico.py  generate_icons.py  install.py  ollama_manager.py  switch_model.py  test_connection.py
src/: __init__.py  config.py  server.py
src/autocad/: __init__.py  connection.py  detector.py  utils.py
src/providers/: __init__.py  base.py  claude.py  ollama.py  openai_compat.py
src/tools/: __init__.py  components.py  drawing.py  drawing3d.py  electrical.py  project.py  reports.py  wires.py
tests/: __init__.py  test_tools.py
web/: __init__.py
web/backend/: app.py  chat.py  state.py
web/frontend/: index.html  manifest.json  sw.js
web/frontend/css/: style.css
web/frontend/js/: api.js  i18n.js  main.js
